--- a/Fonlow.Testing.Basic/Fonlow.Testing.Basic.csproj
+++ b/Fonlow.Testing.Basic/Fonlow.Testing.Basic.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
-		<Version>1.0-Alpha</Version>
+		<Version>1.0</Version>
 		<Authors>Zijian Huang</Authors>
 		<Description>Basic types and functions of Fonlow.Testing.Integration suite.</Description>
 		<PackageReleaseNotes></PackageReleaseNotes>
