--- a/Fonlow.Testing.Integration/Fonlow.Testing.Integration.csproj
+++ b/Fonlow.Testing.Integration/Fonlow.Testing.Integration.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
-		<Version>1.0-Alpha</Version>
+		<Version>1.0</Version>
 		<Authors>Zijian Huang</Authors>
 		<Description>Utilities and fixtures for integration testing with xUnit</Description>
 		<PackageReleaseNotes></PackageReleaseNotes>
