--- a/Fonlow.Testing.ServiceCore/Fonlow.Testing.ServiceCore.csproj
+++ b/Fonlow.Testing.ServiceCore/Fonlow.Testing.ServiceCore.csproj
@@ -11,7 +11,7 @@
 		<PackageTags>xunit nunit mstest unittesting iisexpress iis dotnet</PackageTags>
 		<NeutralLanguage>en</NeutralLanguage>
 		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-		<Version>3.7-Alpha</Version>
+		<Version>3.7</Version>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<AnalysisLevel>latest-all</AnalysisLevel>
 	</PropertyGroup>
