--- a/Fonlow.Testing.Utilities/Fonlow.Testing.Utilities.csproj
+++ b/Fonlow.Testing.Utilities/Fonlow.Testing.Utilities.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
-		<Version>2.0-Alpha</Version>
+		<Version>2.0</Version>
 		<Authors>Zijian Huang</Authors>
 		<Description>Basic types and functions of Fonlow.Testing.Integration suite.</Description>
 		<PackageReleaseNotes></PackageReleaseNotes>
